--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@ on:
       - "v*"
 jobs:
   goreleaser:
+    needs: [golangci, unit_tests]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
